@@ -33,14 +33,13 @@ def view_wiki(request):
 @view_config(route_name='view_page', renderer='templates/view.pt')
 def view_page(request):
     pagename = request.matchdict['pagename']
-    session = DBSession()
-    page = session.query(Page).filter_by(name=pagename).first()
+    page = DBSession.query(Page).filter_by(name=pagename).first()
     if page is None:
         return HTTPNotFound('No such page')
 
     def check(match):
         word = match.group(1)
-        exists = session.query(Page).filter_by(name=word).all()
+        exists = DBSession.query(Page).filter_by(name=word).all()
         if exists:
             view_url = request.route_url('view_page', pagename=word)
             return '<a href="%s">%s</a>' % (view_url, word)
@@ -59,10 +58,9 @@ def view_page(request):
 def add_page(request):
     name = request.matchdict['pagename']
     if 'form.submitted' in request.params:
-        session = DBSession()
         body = request.params['body']
         page = Page(name, body)
-        session.add(page)
+        DBSession.add(page)
         return HTTPFound(location = request.route_url('view_page',
                                                       pagename=name))
     save_url = request.route_url('add_page', pagename=name)
@@ -74,11 +72,10 @@ def add_page(request):
              permission='edit')
 def edit_page(request):
     name = request.matchdict['pagename']
-    session = DBSession()
-    page = session.query(Page).filter_by(name=name).one()
+    page = DBSession.query(Page).filter_by(name=name).one()
     if 'form.submitted' in request.params:
         page.data = request.params['body']
-        session.add(page)
+        DBSession.add(page)
         return HTTPFound(location = request.route_url('view_page',
                                                       pagename=name))
     return dict(
